# polymarket-oracle-bot

./: .gitignore  Cargo.toml  README.md  config.example.toml  pyproject.toml
crates/oracle-bot-rs/: Cargo.toml
crates/oracle-bot-rs/src/: chainlink.rs  clob_ws.rs  config.rs  gamma.rs  main.rs  model.rs  orderbook.rs  signal.rs  state.rs  timeframe.rs
docs/: EMPIRICAL_RUST_VS_PYTHON.md  RUST_HOT_PATH_PLAN.md
scripts/: analyze_telemetry.py  bench_hot_path.py
src/poly_oracle_bot/: __init__.py  __main__.py  bot.py  config.py  dashboard.py  execution.py  feeds.py  models.py  orderbook.py  polymarket.py  preflight.py  risk.py  settlement.py  signal.py  storage.py  telegram.py  timeframes.py
tests/: test_core.py
